WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49279
Fix include statements for local headers
https://bugs.webkit.org/show_bug.cgi?id=49279
Summary
Fix include statements for local headers
David Kilzer (:ddkilzer)
Reported
2010-11-09 14:17:39 PST
Created
attachment 73414
[details]
Patch Reviewed by NOBODY (OOPS!). Use "Foo.h" instead of <Foo.h> for local headers. * assembler/AbstractMacroAssembler.h: Also fixed sort order. * assembler/CodeLocation.h: * yarr/RegexJIT.h: * yarr/RegexParser.h: --- 5 files changed, 19 insertions(+), 7 deletions(-)
Attachments
Patch
(2.62 KB, patch)
2010-11-09 14:17 PST
,
David Kilzer (:ddkilzer)
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2010-11-09 15:37:13 PST
Committed
r71691
: <
http://trac.webkit.org/changeset/71691
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug